fixed signout button on mobile

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -685,6 +685,20 @@ a {
         width: 116px;
         height: auto;
     }
+
+    .logoutButton button  {
+        position: relative;
+        bottom: 10px;
+        width: 50vw;
+        border: 1px solid darkgrey;
+        border-radius: 5px;
+        background: white;
+        color: red;
+        font-weight: 400;
+        height: 5vh;
+        font-size: 2.5vh;
+        box-shadow: 0 2px 4px -2px grey;
+    }
 }
 
 /* Search bar iPhone 6 and below */
